--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -6,31 +6,29 @@
           <div class="info-box card">
             <i class="bi bi-geo-alt"></i>
             <h3>Address</h3>
-            <p>Ludhiana,<br>Punjab, India</p>
+            <p>Jl. Tukad Batanghari No.55, Panjer, Denpasar Selatan, Kota Denpasar</p>
           </div>
         </div>
         <div class="col-lg-6">
           <div class="info-box card">
             <i class="bi bi-telephone"></i>
             <h3>Call Us</h3>
-            <p>**** **** **<br>**** **** **</p>
+            <p>+6281246431155</p>
+            <br>
           </div>
         </div>
         <div class="col-lg-6">
           <div class="info-box card">
             <i class="bi bi-envelope"></i>
             <h3>Email Us</h3>
-            <p><a href="/cdn-cgi/l/email-protection" class="__cf_email__"
-                data-cfemail="650c0b030a25001d04081509004b060a08">[email&#160;protected]</a><br><a
-                href="/cdn-cgi/l/email-protection" class="__cf_email__"
-                data-cfemail="99faf6f7edf8faedd9fce1f8f4e9f5fcb7faf6f4">[email&#160;protected]</a></p>
+            <p>kodingakademi.id@gmail.com</p>
           </div>
         </div>
         <div class="col-lg-6">
           <div class="info-box card">
             <i class="bi bi-clock"></i>
             <h3>Open Hours</h3>
-            <p>Monday - Friday<br>9:00AM - 05:00PM</p>
+            <p>Monday - Friday<br>10:00AM - 05:00PM</p>
           </div>
         </div>
       </div>
