--- a/src/views/faq.ejs
+++ b/src/views/faq.ejs
@@ -5,17 +5,17 @@
         <div class="card-body">
           <h5 class="card-title">Basic Questions</h5>
           <div>
-            <h6>1. Nisi ut ut exercitationem voluptatem esse sunt rerum?</h6>
+            <h6>1. Lorem ipsum dolor sit amet consectetur?</h6>
             <p>Saepe perspiciatis ea. Incidunt blanditiis enim mollitia qui voluptates. Id rem nulla tenetur nihil in
               unde rerum. Quae consequatur placeat qui cumque earum eius omnis quos.</p>
           </div>
           <div class="pt-2">
-            <h6>2. Reiciendis dolores repudiandae?</h6>
+            <h6>2. Lorem ipsum dolor sit amet consectetur?</h6>
             <p>Id ipsam non ut. Placeat doloremque deserunt quia tenetur inventore laboriosam dolores totam odio.
               Aperiam incidunt et. Totam ut quos sunt atque modi molestiae dolorem.</p>
           </div>
           <div class="pt-2">
-            <h6>3. Qui qui reprehenderit ut est illo numquam voluptatem?</h6>
+            <h6>3. Lorem ipsum dolor sit amet consectetur?</h6>
             <p>Enim inventore in consequuntur ipsam voluptatem consequatur beatae. Nostrum consequuntur voluptates et
               blanditiis.</p>
           </div>
