--- a/src/views/partials/navigation.ejs
+++ b/src/views/partials/navigation.ejs
@@ -1,7 +1,7 @@
 <aside id="sidebar" class="sidebar">
   <ul class="sidebar-nav" id="sidebar-nav">
     <li class="nav-heading">Home</li>
-    <li class="nav-item"> <a class="nav-link <%= (sub === '') ? '' : 'collapsed' %>" href="/admin"> <i
+    <li class="nav-item"> <a class="nav-link <%= (sub === '') ? '' : 'collapsed' %>" href="/admin/dashboard"> <i
           class="bi bi-grid"></i>
         <span>Dashboard</span>
       </a>
