--- a/src/views/partials/pageTitle.ejs
+++ b/src/views/partials/pageTitle.ejs
@@ -5,9 +5,9 @@
   <nav>
     <ol class="breadcrumb">
       <% if (sub==='' || sub==='Kelola' || sub==='QR' ) { %>
-        <li class="breadcrumb-item"><a href="/admin">Home</a></li>
+        <li class="breadcrumb-item"><a href="/admin/dashboard">Home</a></li>
         <% }else{ %>
-          <li class="breadcrumb-item"><a href="/admin">Other</a></li>
+          <li class="breadcrumb-item"><a href="/admin/dashboard">Other</a></li>
           <% } %>
             <% if (sub==='Kelola' ) { %>
               <li class="breadcrumb-item">Kelola</li>
