--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -7,9 +7,13 @@
             class="rounded-circle">
           <h2>Koding Akademi</h2>
           <h3 class="my-2">Admin</h3>
-          <div class="social-links mt-2"> <a href="#" class="twitter"><i class="bi bi-twitter"></i></a> <a href="#"
-              class="facebook"><i class="bi bi-facebook"></i></a> <a href="#" class="instagram"><i
-                class="bi bi-instagram"></i></a> <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a></div>
+          <div class="social-links mt-2">
+            <a href="https://www.twitter.com/KodingAkademi" class="twitter"><i class="bi bi-twitter"></i></a>
+            <a href="https://www.facebook.com/kodingakademi.id" class="facebook"><i class="bi bi-facebook"></i></a>
+            <a href="https://www.instagram.com/kodingakademi/" class="instagram"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fwww.kodingakademi.id%2F"
+              class="linkedin"><i class="bi bi-linkedin"></i></a>
+          </div>
         </div>
       </div>
     </div>
@@ -21,46 +25,38 @@
                 data-bs-target="#profile-overview">Overview</button></li>
             <li class="nav-item"> <button class="nav-link" data-bs-toggle="tab" data-bs-target="#profile-edit">Edit
                 Profile</button></li>
-            <li class="nav-item"> <button class="nav-link" data-bs-toggle="tab"
-                data-bs-target="#profile-settings">Settings</button></li>
+
             <li class="nav-item"> <button class="nav-link" data-bs-toggle="tab"
                 data-bs-target="#profile-change-password">Change Password</button></li>
           </ul>
           <div class="tab-content pt-2">
             <div class="tab-pane fade show active profile-overview" id="profile-overview">
               <h5 class="card-title">About</h5>
-              <p class="small fst-italic">Sunt est soluta temporibus accusantium neque nam maiores cumque temporibus.
-                Tempora libero non est unde veniam est qui dolor. Ut sunt iure rerum quae quisquam autem eveniet
-                perspiciatis odit. Fuga sequi sed ea saepe at unde.</p>
+              <p class="small fst-italic">Koding Akademi berdiri sejak tahun 2009 dan merupakan tempat belajar coding
+                dan robotic yang ada di Denpasar, Bali. Koding akademi menyediakan kursus dan juga bootcamp yang
+                mengajarkan mulai dari usia 6 hingga 25 tahun dan sudah bekerja sama dengan berbagai sekolah nasional
+                maupun internasional di Bali.</p>
               <h5 class="card-title">Profile Details</h5>
-              <div class="row">
-                <div class="col-lg-3 col-md-4 label ">Full Name</div>
-                <div class="col-lg-9 col-md-8">Jassa</div>
-              </div>
+
               <div class="row">
                 <div class="col-lg-3 col-md-4 label">Company</div>
-                <div class="col-lg-9 col-md-8">Therichpost</div>
+                <div class="col-lg-9 col-md-8">Koding Akademi</div>
               </div>
               <div class="row">
-                <div class="col-lg-3 col-md-4 label">Job</div>
-                <div class="col-lg-9 col-md-8">Web Designer</div>
+                <div class="col-lg-3 col-md-4 label">Field</div>
+                <div class="col-lg-9 col-md-8">Robotics & Coding Center</div>
               </div>
               <div class="row">
                 <div class="col-lg-3 col-md-4 label">Country</div>
-                <div class="col-lg-9 col-md-8">USA</div>
+                <div class="col-lg-9 col-md-8">Indonesia</div>
               </div>
               <div class="row">
                 <div class="col-lg-3 col-md-4 label">Address</div>
-                <div class="col-lg-9 col-md-8">Ludhiana, Punjab, India</div>
-              </div>
-              <div class="row">
-                <div class="col-lg-3 col-md-4 label">Phone</div>
-                <div class="col-lg-9 col-md-8">(436) 486-3538 x29071</div>
+                <div class="col-lg-9 col-md-8">Jl. Tukad Batanghari No.55, Panjer, Denpasar Selatan, Kota Denpasar</div>
               </div>
               <div class="row">
                 <div class="col-lg-3 col-md-4 label">Email</div>
-                <div class="col-lg-9 col-md-8"><a href="/cdn-cgi/l/email-protection" class="__cf_email__"
-                    data-cfemail="e982c788878d8c9b9a8687a98c91888499858cc78a8684">[email&#160;protected]</a></div>
+                <div class="col-lg-9 col-md-8">kodingakademi.id@gmail.com</div>
               </div>
             </div>
             <div class="tab-pane fade profile-edit pt-3" id="profile-edit">
@@ -74,91 +70,42 @@
                         title="Remove my profile image"><i class="bi bi-trash"></i></a></div>
                   </div>
                 </div>
-                <div class="row mb-3">
-                  <label for="fullName" class="col-md-4 col-lg-3 col-form-label">Full Name</label>
-                  <div class="col-md-8 col-lg-9"> <input name="fullName" type="text" class="form-control" id="fullName"
-                      value="Jassa"></div>
-                </div>
+
                 <div class="row mb-3">
                   <label for="about" class="col-md-4 col-lg-3 col-form-label">About</label>
                   <div class="col-md-8 col-lg-9"><textarea name="about" class="form-control" id="about"
-                      style="height: 100px">Sunt est soluta temporibus accusantium neque nam maiores cumque temporibus. Tempora libero non est unde veniam est qui dolor. Ut sunt iure rerum quae quisquam autem eveniet perspiciatis odit. Fuga sequi sed ea saepe at unde.</textarea>
+                      style="height: 100px">Koding Akademi berdiri sejak tahun 2009 dan merupakan tempat belajar coding dan robotic yang ada di Denpasar, Bali. Koding akademi menyediakan kursus dan juga bootcamp yang mengajarkan mulai dari usia 6 hingga 25 tahun dan sudah bekerja sama dengan berbagai sekolah nasional maupun internasional di Bali.</textarea>
                   </div>
                 </div>
                 <div class="row mb-3">
                   <label for="company" class="col-md-4 col-lg-3 col-form-label">Company</label>
                   <div class="col-md-8 col-lg-9"> <input name="company" type="text" class="form-control" id="company"
-                      value="Therichpost"></div>
+                      value="Koding Akademi"></div>
                 </div>
                 <div class="row mb-3">
-                  <label for="Job" class="col-md-4 col-lg-3 col-form-label">Job</label>
-                  <div class="col-md-8 col-lg-9"> <input name="job" type="text" class="form-control" id="Job"
-                      value="Web Designer"></div>
+                  <label for="Field" class="col-md-4 col-lg-3 col-form-label">Field</label>
+                  <div class="col-md-8 col-lg-9"> <input name="field" type="text" class="form-control" id="Field"
+                      value="Robotics & Coding Center"></div>
                 </div>
                 <div class="row mb-3">
                   <label for="Country" class="col-md-4 col-lg-3 col-form-label">Country</label>
                   <div class="col-md-8 col-lg-9"> <input name="country" type="text" class="form-control" id="Country"
-                      value="USA"></div>
+                      value="Indonesia"></div>
                 </div>
                 <div class="row mb-3">
                   <label for="Address" class="col-md-4 col-lg-3 col-form-label">Address</label>
                   <div class="col-md-8 col-lg-9"> <input name="address" type="text" class="form-control" id="Address"
-                      value="Ludhiana, Punjab, India"></div>
-                </div>
-                <div class="row mb-3">
-                  <label for="Phone" class="col-md-4 col-lg-3 col-form-label">Phone</label>
-                  <div class="col-md-8 col-lg-9"> <input name="phone" type="text" class="form-control" id="Phone"
-                      value="(436) 486-3538 x29071"></div>
+                      value="Jl. Tukad Batanghari No.55, Panjer, Denpasar Selatan, Kota Denpasar"></div>
                 </div>
                 <div class="row mb-3">
                   <label for="Email" class="col-md-4 col-lg-3 col-form-label">Email</label>
                   <div class="col-md-8 col-lg-9"> <input name="email" type="email" class="form-control" id="Email"
-                      value="k.anderson@example.com"></div>
-                </div>
-                <div class="row mb-3">
-                  <label for="Twitter" class="col-md-4 col-lg-3 col-form-label">Twitter Profile</label>
-                  <div class="col-md-8 col-lg-9"> <input name="twitter" type="text" class="form-control" id="Twitter"
-                      value="https://twitter.com/#"></div>
-                </div>
-                <div class="row mb-3">
-                  <label for="Facebook" class="col-md-4 col-lg-3 col-form-label">Facebook Profile</label>
-                  <div class="col-md-8 col-lg-9"> <input name="facebook" type="text" class="form-control" id="Facebook"
-                      value="https://facebook.com/#"></div>
-                </div>
-                <div class="row mb-3">
-                  <label for="Instagram" class="col-md-4 col-lg-3 col-form-label">Instagram Profile</label>
-                  <div class="col-md-8 col-lg-9"> <input name="instagram" type="text" class="form-control"
-                      id="Instagram" value="https://instagram.com/#"></div>
-                </div>
-                <div class="row mb-3">
-                  <label for="Linkedin" class="col-md-4 col-lg-3 col-form-label">Linkedin Profile</label>
-                  <div class="col-md-8 col-lg-9"> <input name="linkedin" type="text" class="form-control" id="Linkedin"
-                      value="https://linkedin.com/#"></div>
+                      value="kodingakademi.id@gmail.com"></div>
                 </div>
                 <div class="text-center"> <button type="submit" class="btn btn-primary">Save Changes</button></div>
               </form>
             </div>
-            <div class="tab-pane fade pt-3" id="profile-settings">
-              <form>
-                <div class="row mb-3">
-                  <label for="fullName" class="col-md-4 col-lg-3 col-form-label">Email Notifications</label>
-                  <div class="col-md-8 col-lg-9">
-                    <div class="form-check"> <input class="form-check-input" type="checkbox" id="changesMade" checked>
-                      <label class="form-check-label" for="changesMade"> Changes made to your account </label>
-                    </div>
-                    <div class="form-check"> <input class="form-check-input" type="checkbox" id="newProducts" checked>
-                      <label class="form-check-label" for="newProducts"> Information on new products and services
-                      </label>
-                    </div>
-                    <div class="form-check"> <input class="form-check-input" type="checkbox" id="proOffers"> <label
-                        class="form-check-label" for="proOffers"> Marketing and promo offers </label></div>
-                    <div class="form-check"> <input class="form-check-input" type="checkbox" id="securityNotify" checked
-                        disabled> <label class="form-check-label" for="securityNotify"> Security alerts </label></div>
-                  </div>
-                </div>
-                <div class="text-center"> <button type="submit" class="btn btn-primary">Save Changes</button></div>
-              </form>
-            </div>
+
             <div class="tab-pane fade pt-3" id="profile-change-password">
               <form>
                 <div class="row mb-3">
