--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -13,7 +13,6 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css">
   <link href="/css/style.css" rel="stylesheet">
 </head>
 
@@ -31,7 +30,9 @@
               class="rounded-circle"> <span class="d-none d-md-block dropdown-toggle ps-2">Admin</span> </a>
           <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
             <li class="dropdown-header">
-              <h6>Admin</h6>
+              <h6>
+                @adminkeren
+              </h6>
               <span>Koding Akademi</span>
             </li>
             <li>
