--- a/src/views/partials/pageTitle.ejs
+++ b/src/views/partials/pageTitle.ejs
@@ -13,8 +13,15 @@
               <li class="breadcrumb-item">Kelola</li>
               <% } %>
                 <li class="breadcrumb-item active">
-                  <%= title %>
+                  <a href="/admin/<%= (page === 'show-user') ? 'user-handler' : page %>">
+                    <%= title %>
+                  </a>
                 </li>
+                <% if (detail ) { %>
+                  <li class="breadcrumb-item">
+                    <%= detail.id %>
+                  </li>
+                  <% } %>
     </ol>
   </nav>
 </div>
