--- a/src/views/user-handler.ejs
+++ b/src/views/user-handler.ejs
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="https://cdn.datatables.net/1.13.3/css/jquery.dataTables.min.css">
+
 <section class="section">
 
   <!-- Modal -->
@@ -8,22 +10,25 @@
           <h1 class="modal-title fs-5" id="exampleModalLabel">Tambah User</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
+
         <form action="">
           <div class="modal-body">
             <div class="form-floating mb-3">
-              <input type="text" name="name" class="form-control" placeholder="John Doe" autocomplete="off">
+              <input id="name" type="text" class="form-control" placeholder="John Doe" autocomplete="off" required>
               <label>Nama Lengkap</label>
             </div>
             <div class="form-floating mb-3">
-              <input type="email" name="email" class="form-control" placeholder="contoh@example.com" autocomplete="off">
+              <input id="email" type="email" class="form-control" placeholder="contoh@example.com" autocomplete="off"
+                required>
               <label>Email</label>
             </div>
             <div class="form-floating mb-3">
-              <input type="password" name="password" class="form-control" placeholder="password">
+              <input id="password" type="password" name="password" class="form-control" placeholder="password" required>
               <label>Password</label>
             </div>
             <div class="form-floating">
-              <input type="password" name="confirmPassword" class="form-control" placeholder="password">
+              <input id="confirmPassword" type="password" name="confirmPassword" class="form-control"
+                placeholder="password" required>
               <label>Confirm Password</label>
             </div>
           </div>
@@ -31,6 +36,7 @@
             <button onclick="sendData()" type="button" class="btn btn-md btn-success">Simpan</button>
           </div>
         </form>
+
       </div>
     </div>
   </div>
@@ -45,55 +51,105 @@
             <i class="bi bi-plus-circle"></i>
             Tambah Data
           </button>
-          <table class="table datatable">
+
+          <table id="myTable" class="hover row-border cell-border">
             <thead>
               <tr>
-                <th scope="col">#</th>
-                <th scope="col">Name</th>
-                <th scope="col">Email</th>
-                <th scope="col">Verified</th>
-                <th scope="col">Action</th>
+                <th>#</th>
+                <th>Name</th>
+                <th>Email</th>
+                <th>Verified</th>
+                <th>Action</th>
               </tr>
             </thead>
-            <tbody>
-              <tr>
-                <th scope="row">1</th>
-                <td>John Doe</td>
-                <td>johdoe@gmail.com</td>
-                <td><span class="text-danger">No</span></td>
-                <td>
-                  <a href=""><i class="bi bi-pencil text-warning"></i></a>
-                  <span>|</span>
-                  <a href=""><i class="bi bi-trash text-danger"></i></a>
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">2</th>
-                <td>Doddy</td>
-                <td>doddy@gmail.com</td>
-                <td><span class="text-success">Yes</span></td>
-                <td>
-                  <a href=""><i class="bi bi-pencil text-warning"></i></a>
-                  <span>|</span>
-                  <a href=""><i class="bi bi-trash text-danger"></i></a>
-                </td>
-              </tr>
-            </tbody>
           </table>
+
         </div>
       </div>
     </div>
   </div>
 </section>
 
+<script src="https://code.jquery.com/jquery-3.6.3.min.js"
+  integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+<script src="https://cdn.datatables.net/1.13.3/js/jquery.dataTables.min.js"></script>
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
 <script>
   function sendData() {
-    swal({
-      title: "Success!",
-      text: "Berhasil disimpan!",
-      icon: "success",
-      button: "OK",
-    });
+    $('.modal-footer button').prop('disabled', true)
+    const name = $('#name').val()
+    const email = $('#email').val()
+    const password = $('#password').val()
+    const confirmPassword = $('#confirmPassword').val()
+
+    // validasi
+    if (name === '' || email === '' || password === '' || confirmPassword === '') {
+      swal({
+        title: "Gagal!",
+        text: "Data tidak boleh kosong!",
+        icon: "error",
+        button: "OK",
+      })
+      $('.modal-footer button').prop('disabled', false)
+      return
+    }
+
+    axios.post('http://localhost:3000/api/users/register', {
+      name, email, password, confirmPassword
+    }).then(res => {
+      swal({
+        title: "Success!",
+        text: "Berhasil disimpan!",
+        icon: "success",
+        button: "OK",
+      }).then((btnClicked) => {
+        if (btnClicked) {
+          window.location.reload()
+        } else {
+          setInterval(() => {
+            window.location.reload()
+          }, 500)
+        }
+        $('.modal-footer button').prop('disabled', false)
+      })
+    }).catch(err => {
+      const { message } = err.response.data
+      swal({
+        title: "Gagal!",
+        text: message,
+        icon: "error",
+        button: "OK",
+      })
+      $('.modal-footer button').prop('disabled', false)
+    })
   }
+
+  const users = []
+  axios.get('http://localhost:3000/api/users').then(response => {
+    const { data } = response.data
+    data.forEach((user, i) => {
+      const singleData = {
+        "#": i + 1,
+        "name": user.name,
+        "email": user.email,
+        "verified": (user.verified === false) ? `<span class="text-danger">No</span>` : '<span class="text-success">Yes</span>',
+        "action": `<a href="/admin/user-handler/show/${user.id}">Lihat Detail</a>`
+      }
+      users.push(singleData)
+    })
+
+    $('#myTable').DataTable({
+      "data": users,
+      "columns": [
+        { "data": "#" },
+        { "data": "name" },
+        { "data": "email" },
+        { "data": "verified" },
+        { "data": "action" },
+      ]
+    })
+  })
+
 </script>
