--- a/src/views/pages/event-handler.ejs
+++ b/src/views/pages/event-handler.ejs
@@ -34,8 +34,8 @@
         <div class="card-body">
           <h5 class="card-title">Kelola Data Event</h5>
           <button type="button" class="btn btn-sm btn-success mb-3" data-bs-toggle="modal" data-bs-target="#formModal">
-            <i class="bi bi-plus-circle"></i>
-            Tambah Data
+            <i class="bi bi-calendar-event"></i>
+            Tambah Event
           </button>
           <table class="table datatable">
             <thead>
