--- a/src/views/pages/course-handler.ejs
+++ b/src/views/pages/course-handler.ejs
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="https://cdn.datatables.net/1.13.3/css/jquery.dataTables.min.css">
+<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jodit/3.24.2/jodit.es2018.min.css" /> -->
 
 <section class="section">
 
@@ -6,10 +7,12 @@
   <div class="modal fade" id="formModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
+
         <div class="modal-header">
           <h1 class="modal-title fs-5" id="exampleModalLabel">Tambah Course</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
+
         <form action="" enctype="multipart/form-data">
           <div class="modal-body">
             <div class="mb-3">
@@ -38,6 +41,9 @@
               <textarea id="description" name="description" class="form-control" placeholder="Deskripsi"
                 rows="3"></textarea>
             </div>
+            <!-- <div class="mb-3">
+              <textarea id="editor" name="editor"></textarea>
+            </div> -->
           </div>
           <div class="modal-footer">
             <button type="submit" class="btn btn-sm btn-success">Tambah</button>
@@ -77,11 +83,14 @@
 <script src="https://code.jquery.com/jquery-3.6.3.min.js"
   integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
 <script src="https://cdn.datatables.net/1.13.3/js/jquery.dataTables.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jodit/3.24.2/jodit.es2018.min.js"></script>
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
 <script>
   const courses = []
+  // const editor = Jodit.make('#editor');
+  // editor.value = '<p>start</p>';
   axios.get('http://localhost:3000/api/courses').then(response => {
     const { data } = response.data
     data.forEach((course, i) => {
